@@ -4,7 +4,7 @@
 
  JOE looks for this file in:
 	1 - $HOME/.rjoerc
-	2 - @sysconfdir@/rjoerc
+	2 - @JOERC@/rjoerc
 
  This file can include other files by placing the following include command
  in the first column:
@@ -855,8 +855,8 @@
 \i   Help Screen    \|turn off with ^KH    prev. screen ^[,                        \i
 \i \i Send bug reports to: http://sourceforge.net/projects/joe-editor \|\i \i
 \i \i \|\i \i
-\i \i  default joerc file is here @prefix@/etc/joe/joerc \|\i \i
-\i \i  additional documentation can be found here @prefix@/etc/joe/doc \|\i \i
+\i \i  default joerc file is here @JOERC@/joerc \|\i \i
+\i \i  additional documentation can be found here @JOERC@/doc \|\i \i
 }
 
 
