@@ -5,6 +5,10 @@ Mon Mar 14 11:34:56 EST 2005
 
 	Fix bug where menu wasn't being resized.
 
+	Fix processing of joerc.in -> joerc so that
+	paths are properly set up (added sed script
+	to Makefile.am).
+
 Sun Mar 13 12:39:18 EST 2005
 
 	Fix -mnew and -mold when there are multiple
